--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <html>
 
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-R2YZW6Y7J0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-R2YZW6Y7J0');
+</script>
+
 <title>Tanfolyami anyag</title>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 </head>
