--- a/index.html
+++ b/index.html
@@ -1,56 +1,61 @@
 <html>
 
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-R2YZW6Y7J0"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-R2YZW6Y7J0"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-R2YZW6Y7J0');
-</script>
+    gtag('config', 'G-R2YZW6Y7J0');
+  </script>
 
-<title>Tanfolyami anyag</title>
-<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-</head>
+  <title>Tanfolyami anyag</title>
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+
+  <style>
+    .plakat {
+      margin-right: 10px;
+    }
+    .plakat img {
+      width: 120px;
+    }
+  </style>
+</head> 
 
 <body style="margin:1cm">
 
-<h1>A bemutatóportfólió dokumentumai (Dr. Szárnyas István, 74761700563)</h1>
+  <div>
+    <img src="img/splashscreen.jpg" width="920px" />
+  </div>
 
-<ol>
-  <li><a href="pub/borvizsgalati-modszerek.pdf">Borvizsgálati módszerek. Borkémiai vizsgálatok. Borász tanfolyam prezentációja. 2010-2011.</a></li>
-  <li><a href="pub/novenyvedelem-1997.pdf">Szárnyas-Béres-Magyar (1997): Az egynyári szélfű (Mercurialis annua L.) elterjedése Vas megyében. Növényvédelem, 33 (12), 619-621.</a></li>
-  <li><a href="mari-neni-kertje/">Szakképzési digitális oktatási segédanyag. Mari néni kertje. Digitális, tanítást és tanulást segítő növényvédelmi képeskönyv, 2016.</a></li>
-  <li>Tanfolyami digitális tananyag a II. forgalmi kategóriájú növényvédő szerek vásárlásához és felhasználásához. Kőszeg, 2014.</a></li>
-  <ul>
-    <li><a href="pub/eloadas-A.pdf">Előadás az "A" kérdéscsoporthoz</a></li>
-    <li><a href="pub/eloadas-B.pdf">Előadás az "B" kérdéscsoporthoz</a></li>
-    <li><a href="pub/eloadas-C.pdf">Előadás az "C" kérdéscsoporthoz</a></li>
-    <li><a href="pub/jogszabalyi-hatter.pdf">Jogszabályi háttér</a></li>
-  </ul>
-</ol>
+  <!-- Ismeretterjesztő filmek -->
 
-<p><b>Szerző:</b> Dr. Szárnyas István</p>
+  <h2>Ismeretterjesztő filmek</h2>
+  <div>
+    <ol>
+      <li><a href="https://www.youtube.com/watch?v=dYlOfgkcSZU">A keserű valóság</a></li>
+      <li><a href="https://www.youtube.com/watch?v=0vVIJxWOh54">Szaporodjatok és sokasodjatok!</a></li>
+      <li><a href="https://www.youtube.com/watch?v=T8kkqJcQdRs">Északi szélesség, keleti hosszúság</a></li>
+      <li><a href="https://www.youtube.com/watch?v=nB_9b6C9iuY">Növekedés és fejlődés</a></li>
+      <li><a href="https://www.youtube.com/watch?v=xOdTIcCykgA">Ne bánts!</a></li>
+    </ol>
+  </div>
 
-<p>
-  <b>Lektorok:</b>
-
-  <ul>
-    <li>Dr. Nagy Viktor, SYNGENTA területi képviselő</li>
-    <li>Sebestyén Lajos, növényvédelmi szakmérnök</li>
-  </ul>
-<p>
-
-<h1>Kiemelt publikációk listája (Dr. Szárnyas István, 74761700563)</h1>
-
-<ul>
-  <li><a href="pub/novenyvedelem-1998.pdf">Szárnyas István, Béres Imre, "Az egyéves szélfű (Mercurialis annua L.) irtása posztemergens gyomirtó szerekkel", Növényvédelem 34 (10), 1998</a></li>
-  <li><a href="pub/novenyvedelem-1999.pdf">Szárnyas István, Béres Imre, "Adatok az egynyári szélfű (Mercurialisannua L.) csírázásbiológiájához", Növényvédelem 35 (4), 1999</a></li>
-  <li><a href="pub/novenyvedelem-2000.pdf">Szárnyas István, Béres Imre, "Adatok a szőrös disznóparéj (Amaranthus retroflexus L.) és a fehér libatop (Chenopodium album L.) csírázásbiológiájához", Növényvédelem 36 (10), 2000</a></li>
-  <li><a href="pub/acta-agronomica-2001.pdf">István Szárnyas, Imre Béres, "Germination characteristics of common lamb's-quarters (Chenopodium album L.)", Acta Agranomica Óváriensis 43 (1), 2001</a></li>
-</ul>
+  <!-- Plakátok -->
+  
+  <h2>Plakátok</h2>
+  <div>
+    <span class="plakat"><a href="img/01-plakat.jpg"><img src="img/01-plakat-small.jpg" /></a></span>
+    <span class="plakat"><a href="img/02-plakat.jpg"><img src="img/02-plakat-small.jpg" /></a></span>
+    <span class="plakat"><a href="img/03-plakat.jpg"><img src="img/03-plakat-small.jpg" /></a></span>
+    <span class="plakat"><a href="img/04-plakat.jpg"><img src="img/04-plakat-small.jpg" /></a></span>
+    <span class="plakat"><a href="img/05-plakat.jpg"><img src="img/05-plakat-small.jpg" /></a></span>
+    <span class="plakat"><a href="img/06-plakat.jpg"><img src="img/06-plakat-small.jpg" /></a></span>
+    <span class="plakat"><a href="img/07-plakat.jpg"><img src="img/07-plakat-small.jpg" /></a></span>
+  </div>
 
 </body>
+
 </html>
