--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <img src="img/splashscreen.jpg" width="920px" />
   </div>
 
+  <h2><a href="pub/kutatoprogram-osszefoglalo-szarnyas-istvan.pdf">Kutatóprogram összefoglalója</a></h2>
+
   <!-- Ismeretterjesztő filmek -->
 
   <h2>Ismeretterjesztő filmek</h2>
