--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     gtag('config', 'G-R2YZW6Y7J0');
   </script>
 
-  <title>Tanfolyami anyag</title>
+  <title>Kutatóprogram</title>
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 
   <style>
