--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
     <span class="plakat"><a href="img/07-plakat.jpg"><img src="img/07-plakat-small.jpg" /></a></span>
   </div>
 
+  <!-- Publikációk -->
+  
+  <h2>Publikációk</h2>
+  <div>
+    <li><a href="pub/novenyvedelem-1998.pdf">Szárnyas István, Béres Imre, &quot;Az egyéves szélfű (Mercurialis annua L.) irtása posztemergens gyomirtó szerekkel&quot;, Növényvédelem 34 (10), 1998</a></li>
+    <li><a href="pub/novenyvedelem-1999.pdf">Szárnyas István, Béres Imre, &quot;Adatok az egynyári szélfű (Mercurialis annua L.) csírázásbiológiájához&quot;, Növényvédelem 35 (4), 1999</a></li>
+    <li><a href="pub/novenyvedelem-2000.pdf">Szárnyas István, Béres Imre, &quot;Adatok a szőrös disznóparéj (Amaranthus retroflexus L.) és a fehér libatop (Chenopodium album L.) csírázásbiológiájához&quot;, Növényvédelem 36 (10), 2000</a></li>
+    <li><a href="pub/acta-agronomica-2001.pdf">István Szárnyas, Imre Béres, &quot;Germination characteristics of common lamb&#39;s-quarters (Chenopodium album L.)&quot;, Acta Agranomica Óváriensis 43 (1), 2001</a></li>
+  </div>
+
 </body>
 
 </html>
