--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <img src="img/splashscreen.jpg" width="920px" />
   </div>
 
-  <h2><a href="pub/kutatoprogram-osszefoglalo-szarnyas-istvan.pdf">Kutatóprogram összefoglalója</a></h2>
+  <h2><a href="pub/kutatoprogram-osszefoglalo-szarnyas-istvan.pdf">Záró kutatási beszámoló</a></h2>
 
   <!-- Ismeretterjesztő filmek -->
 
